# ine5429

trabalhos/t1/: main.blg  main.fdb_latexmk  main.fls  main.tex
trabalhos/t2/: generated.numbers  pyproject.toml
trabalhos/t2/t2/: __main__.py  prime.py  rand.py
trabalhos/t2/tests/: test_t2.py
